Get organisms based test type
