# config/routes.rb
@@ -31,7 +31,11 @@ Rails.application.routes.draw do
       resources :departments
       resources :privileges
       resources :drugs
-      resources :organisms
+      resources :organisms do
+        collection do
+          get '/get_organisms_based_test_type' => 'organisms#get_organisms_based_test_type'
+        end
+      end
       resources :test_panels
       resources :test_results
       resources :facilities
